<resources>
    <string name="app_name">cbeasplus</string>
    <string name="button">Button</string>
    <string name="enable">Switch</string>
    <string name="emergency_type">Select Emergency Type</string>
    <string name="incidence_type">Incidence Type</string>
    <string name="spinner_hint">Indicate incidence type</string>
    <string name="txPhoneNo">Alert Source Mobile No.</string>
    <string name="txSentMsg">Alert Message</string>
    <string name="msgRpt">Messaging Status</string>
    <!-- RegisterActivity -->
    <string name="reg_status">Registration Status</string>
    <string name="btn_reg">Register</string>
    <string name="btn_verify_reg">Verify Registration Status</string>
    <string name="txt_phone">Enter Phone Number</string>
    <string name="txaddress">Address</string>
    <string name="btn_map">Incidence location</string>
    <string name="name">Name</string>
    <string name="PreferenceMobile">Mobile</string>
    <string name="pref_display_reg_status">Status</string>
    <string name="btn_verify">Register/Verify</string>
</resources>